<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_payment_requests"
            android:icon="@drawable/ic_menu_payment_requests"
            android:title="@string/menu_payment_requests" />
        <item
            android:id="@+id/nav_nfts"
            android:icon="@drawable/ic_menu_nft"
            android:title="@string/menu_nfts" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_contacts"
            android:title="@string/menu_contacts" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_menu_transactions"
            android:title="@string/menu_transactions" />
    </group>
</menu>