<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_1"
        style="@style/Flink.Button.Keyboard"
        android:layout_width="@dimen/constraint_layout_auto_size"
        android:layout_height="@dimen/constraint_layout_auto_size"
        android:text="@string/button_1"
        app:layout_constraintBottom_toTopOf="@id/button_4"
        app:layout_constraintEnd_toStartOf="@id/button_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_2"
        style="@style/Flink.Button.Keyboard"
        android:layout_width="@dimen/constraint_layout_auto_size"
        android:layout_height="@dimen/constraint_layout_auto_size"
        android:text="@string/button_2"
        app:layout_constraintBottom_toTopOf="@id/button_5"
        app:layout_constraintEnd_toStartOf="@id/button_3"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_3"
        style="@style/Flink.Button.Keyboard"
        android:layout_width="@dimen/constraint_layout_auto_size"
        android:layout_height="@dimen/constraint_layout_auto_size"
        android:text="@string/button_3"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_4"
        style="@style/Flink.Button.Keyboard"
        android:layout_width="@dimen/constraint_layout_auto_size"
        android:layout_height="@dimen/constraint_layout_auto_size"
        android:text="@string/button_4"
        app:layout_constraintBottom_toTopOf="@id/button_7"
        app:layout_constraintEnd_toStartOf="@id/button_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_1" />

    <Button
        android:id="@+id/button_5"
        style="@style/Flink.Button.Keyboard"
        android:layout_width="@dimen/constraint_layout_auto_size"
        android:layout_height="@dimen/constraint_layout_auto_size"
        android:text="@string/button_5"
        app:layout_constraintBottom_toTopOf="@id/button_8"
        app:layout_constraintEnd_toStartOf="@id/button_6"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintTop_toBottomOf="@id/button_2" />

    <Button
        android:id="@+id/button_6"
        style="@style/Flink.Button.Keyboard"
        android:layout_width="@dimen/constraint_layout_auto_size"
        android:layout_height="@dimen/constraint_layout_auto_size"
        android:text="@string/button_6"
        app:layout_constraintBottom_toTopOf="@id/button_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintTop_toBottomOf="@id/button_3" />

    <Button
        android:id="@+id/button_7"
        style="@style/Flink.Button.Keyboard"
        android:layout_width="@dimen/constraint_layout_auto_size"
        android:layout_height="@dimen/constraint_layout_auto_size"
        android:text="@string/button_7"
        app:layout_constraintBottom_toTopOf="@id/button_del"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_4" />

    <Button
        android:id="@+id/button_8"
        style="@style/Flink.Button.Keyboard"
        android:layout_width="@dimen/constraint_layout_auto_size"
        android:layout_height="@dimen/constraint_layout_auto_size"
        android:text="@string/button_8"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@id/button_9"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@id/button_5" />

    <Button
        android:id="@+id/button_9"
        style="@style/Flink.Button.Keyboard"
        android:layout_width="@dimen/constraint_layout_auto_size"
        android:layout_height="@dimen/constraint_layout_auto_size"
        android:text="@string/button_9"
        app:layout_constraintBottom_toTopOf="@id/button_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintTop_toBottomOf="@id/button_6" />

    <Button
        android:id="@+id/button_del"
        style="@style/Flink.Button.Keyboard"
        android:layout_width="@dimen/constraint_layout_auto_size"
        android:layout_height="@dimen/constraint_layout_auto_size"
        android:text="@string/button_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_9" />

    <Button
        android:id="@+id/button_0"
        style="@style/Flink.Button.Keyboard"
        android:layout_width="@dimen/constraint_layout_auto_size"
        android:layout_height="@dimen/constraint_layout_auto_size"
        android:text="@string/button_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_ok"
        app:layout_constraintStart_toEndOf="@id/button_del"
        app:layout_constraintTop_toBottomOf="@id/button_8" />

    <Button
        android:id="@+id/button_ok"
        style="@style/Flink.Button.Keyboard"
        android:layout_width="@dimen/constraint_layout_auto_size"
        android:layout_height="@dimen/constraint_layout_auto_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_0"
        app:layout_constraintTop_toBottomOf="@id/button_9"
        tools:text="@string/button_ok" />

</androidx.constraintlayout.widget.ConstraintLayout>