<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/pin_circle_size">

    <ImageView
        android:id="@+id/image_pin_circle_1"
        android:layout_width="@dimen/pin_circle_size"
        android:layout_height="@dimen/pin_circle_size"
        android:contentDescription="@string/content_description_pin_number_1"
        android:src="@drawable/pin_circle_empty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_pin_circle_2"
        android:layout_width="@dimen/pin_circle_size"
        android:layout_height="@dimen/pin_circle_size"
        android:layout_marginStart="@dimen/pin_circle_margin"
        android:contentDescription="@string/content_description_pin_number_2"
        android:src="@drawable/pin_circle_empty"
        app:layout_constraintStart_toEndOf="@id/image_pin_circle_1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_pin_circle_3"
        android:layout_width="@dimen/pin_circle_size"
        android:layout_height="@dimen/pin_circle_size"
        android:layout_marginStart="@dimen/pin_circle_margin"
        android:contentDescription="@string/content_description_pin_number_3"
        android:src="@drawable/pin_circle_empty"
        app:layout_constraintStart_toEndOf="@id/image_pin_circle_2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_pin_circle_4"
        android:layout_width="@dimen/pin_circle_size"
        android:layout_height="@dimen/pin_circle_size"
        android:layout_marginStart="@dimen/pin_circle_margin"
        android:contentDescription="@string/content_description_pin_number_4"
        android:src="@drawable/pin_circle_empty"
        app:layout_constraintStart_toEndOf="@id/image_pin_circle_3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_pin_circle_5"
        android:layout_width="@dimen/pin_circle_size"
        android:layout_height="@dimen/pin_circle_size"
        android:layout_marginStart="@dimen/pin_circle_margin"
        android:contentDescription="@string/content_description_pin_number_5"
        android:src="@drawable/pin_circle_empty"
        app:layout_constraintStart_toEndOf="@id/image_pin_circle_4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_pin_circle_6"
        android:layout_width="@dimen/pin_circle_size"
        android:layout_height="@dimen/pin_circle_size"
        android:layout_marginStart="@dimen/pin_circle_margin"
        android:contentDescription="@string/content_description_pin_number_6"
        android:src="@drawable/pin_circle_empty"
        app:layout_constraintStart_toEndOf="@id/image_pin_circle_5"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>