<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.payment.request.PaymentRequestConfirmationFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@integer/bottom_button_guideline" />

    <TextView
        android:id="@+id/text_transaction_details"
        style="@style/Flink.TextView.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/payment_request_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/transaction_details"
        layout="@layout/layout_transaction_details"
        android:layout_width="match_parent"
        android:layout_height="@dimen/constraint_layout_auto_size"
        app:layout_constraintBottom_toTopOf="@id/text_confirm"
        app:layout_constraintTop_toBottomOf="@id/text_transaction_details" />

    <TextView
        android:id="@+id/text_confirm"
        style="@style/Flink.TextView.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/confirm_question"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_no"
        style="@style/Flink.Button.Red"
        android:layout_width="@dimen/constraint_layout_auto_size"
        android:layout_height="@dimen/constraint_layout_auto_size"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_bottom_button" />

    <Button
        android:id="@+id/button_yes"
        style="@style/Flink.Button.Green"
        android:layout_width="@dimen/constraint_layout_auto_size"
        android:layout_height="@dimen/constraint_layout_auto_size"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_no"
        app:layout_constraintTop_toBottomOf="@id/guideline_bottom_button" />

</androidx.constraintlayout.widget.ConstraintLayout>